--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,19 +45,19 @@ jobs:
           # Print the SSH_PRIVATE_KEY to the logs (for debugging purposes only)
           echo "Setting up SSH keys..."
           echo "$SSH_PRIVATE_KEY"
-          echo "SSH_PRIVATE_KEY length: ${#SSH_PRIVATE_KEY}"
+          echo "SSH_PRIVATE_KEY length: ${{ secrets.SSH_PRIVATE_KEY }}"
 
           # Create the .ssh directory
           mkdir -p ~/.ssh
 
           # Check if the SSH_PRIVATE_KEY is empty (debugging step)
-          if [ -z "$SSH_PRIVATE_KEY" ]; then
+          if [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
             echo "Error: SSH_PRIVATE_KEY is empty!"
             exit 1
           fi
 
           # Write the SSH private key to the id_rsa file
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
 
           # Set permissions for the SSH private key file
           chmod 600 ~/.ssh/id_rsa
