--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,17 +47,22 @@ jobs:
           echo "$SSH_PRIVATE_KEY"
           echo "SSH_PRIVATE_KEY length: ${{ secrets.SSH_PRIVATE_KEY }}"
 
-          # Create the .ssh directory
-          mkdir -p ~/.ssh
-
           # Check if the SSH_PRIVATE_KEY is empty (debugging step)
           if [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
             echo "Error: SSH_PRIVATE_KEY is empty!"
             exit 1
           fi
 
+
+          # Create the .ssh directory
+          mkdir -p ~/.ssh
+
           # Write the SSH private key to the id_rsa file
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+
+          # Check if the file was written correctly (without exposing the private key)
+          ls -la ~/.ssh
+          cat ~/.ssh/id_rsa | head -n 10  # Output first 10 lines (just for validation, not printing entire key)
 
           # Set permissions for the SSH private key file
           chmod 600 ~/.ssh/id_rsa
