--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,10 +66,10 @@ jobs:
       - name: Check RAILWAY_TOKEN and Deploy
         run: |
           if [ -z "$RAILWAY_API_KEY" ]; then
-            echo "ERROR: RAILWAY_TOKEN is not set!"
+            echo "ERROR: RAILWAY_API_KEY is not set!"
             exit 1
           else
-            echo "RAILWAY_TOKEN is set correctly."
+            echo "RAILWAY_API_KEY is set correctly."
           fi
           echo "Deploying Flask app to Railway"
           railway up --service flask-app > railway_deploy_output.log 2>&1
